--- a/main/ingress/portal-noticia-pod.yaml
+++ b/main/ingress/portal-noticia-pod.yaml
@@ -2,8 +2,15 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: portal-pod
+  labels:
+    app: portal-noticias
 
 spec:
   containers:
     - name: portal-container
       image: docker.io/aluracursos/portal-noticias:1
+      ports:
+        - containerPort: 80
+      envFrom: 
+        - configMapRef : 
+           name: portal-configmap  
